--- a/src/main/webapp/resultData/file_upload_Result.zul
+++ b/src/main/webapp/resultData/file_upload_Result.zul
@@ -31,15 +31,31 @@ use="com.cimmyt.zk.studies.ControlLoadFileResult" onCreate="idWindowFileUpload.l
 				</vbox>
 			</box>
 
-	<box> 
-	<fisheyebar id="idFsb" style="position:absolute; margin:15px 180px;" attachEdge="top"
-	 itemWidth="50" itemHeight="50" itemMaxHeight="60" itemMaxWidth="60">
-	    <fisheye label="${lblMenTAdd}" visible="false" id="idLoadFile"
-	        image="${imgOk}" onClick="idWindowFileUpload.closeWindow()"/>
-	    <fisheye label="${lblMenTCancel}" 
-	    image="${imgClose}" onClick="idWindowFileUpload.closeWindow()"/>
-	</fisheyebar>
-	
-	</box>
+	<div align="center" width="100%">
+	<hbox>
+	<image  id="idLoadFile" tooltiptext="${lblMenTAdd}" src="${imgOk}" onClick="idWindowFileUpload.closeWindow()"
+					width="50px" height="50px" visible="false" >
+						<attribute name="onMouseOver">
+							idLoadFile.setWidth("60px");
+							idLoadFile.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							idLoadFile.setWidth("50px");
+							idLoadFile.setHeight("50px");
+						</attribute>
+					</image>
+					<image  id="idCancel" tooltiptext="${lblMenTCancel}" src="${imgClose}" onClick="idWindowFileUpload.closeWindow()"
+					width="50px" height="50px" visible="true">
+						<attribute name="onMouseOver">
+							idCancel.setWidth("60px");
+							idCancel.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							idCancel.setWidth("50px");
+							idCancel.setHeight("50px");
+						</attribute>
+					</image>
+	</hbox>
+	</div>
 </window>
 </zk>
