--- a/src/main/webapp/resultData/result_data.zul
+++ b/src/main/webapp/resultData/result_data.zul
@@ -48,22 +48,67 @@ use="com.cimmyt.zk.studies.ControlPlateInformation" onCreate="idWindowR.loadCont
 	 
 	 	</center>
 	 	<south height="120px">
-	 		<box> 
-			<fisheyebar id="idFsb" style="position:absolute; margin:15px 280px;" attachEdge="top"
-			 itemWidth="50" itemHeight="50" itemMaxHeight="60" itemMaxWidth="60">
-			  <fisheye label="${lblSWPSAll}" 
-				        image="${imgSelectall}" onClick="idWindowR.selectAllItem()"/>
-				    <fisheye label="${lblSWPCS}" 
-				    image="${imgClear}" onClick="idWindowR.deSelectAllItem()"/>
-				     <fisheye label="${lblResultDSC}" 
-				    image="${imgSaveN}" onClick="idWindowR.saveTemplateResulData()"/>
-			    <fisheye label="${lblNext}" 
-			        image="${imgNext}" onClick="idWindowR.showResulDataTable()"/>
-			    <fisheye label="${lblMenTCancel}" 
-			    image="${imgClose}" onClick="idWindowR.closeWindow()"/>
-			</fisheyebar>
+	 		 
+	 		<div align="center" width="100%">
+			<hbox >
+				<image  id="idSelecAll" tooltiptext="${lblSWPSAll}" src="${imgSelectall}" onClick="idWindowR.selectAllItem()"
+											width="40px" height="40px">
+											<attribute name="onMouseOver">
+												idSelecAll.setWidth("60px");
+												idSelecAll.setHeight("60px");
+											</attribute>
+											<attribute name="onMouseOut">
+												idSelecAll.setWidth("40px");
+												idSelecAll.setHeight("40px");
+											</attribute>
+				</image>
+				<image  id="idDesSelectAll" tooltiptext="${lblSWPCS}" src="${imgClear}" onClick="idWindowR.deSelectAllItem()"
+											width="40px" height="40px" visible="false">
+											<attribute name="onMouseOver">
+												idDesSelectAll.setWidth("60px");
+												idDesSelectAll.setHeight("60px");
+											</attribute>
+											<attribute name="onMouseOut">
+												idDesSelectAll.setWidth("40px");
+												idDesSelectAll.setHeight("40px");
+											</attribute>
+				</image>
+				<image  id="idSaveTemp" tooltiptext="${lblResultDSC}" src="${imgSaveN}" onClick="idWindowR.saveTemplateResulData()"
+											width="40px" height="40px" >
+											<attribute name="onMouseOver">
+												idSaveTemp.setWidth("60px");
+												idSaveTemp.setHeight("60px");
+											</attribute>
+											<attribute name="onMouseOut">
+												idSaveTemp.setWidth("40px");
+												idSaveTemp.setHeight("40px");
+											</attribute>
+				</image>
+						<image  id="idNext" tooltiptext="${lblNext}" src="${imgNext}" onClick="idWindowR.showResulDataTable()"
+					width="50px" height="50px" visible="true">
+						<attribute name="onMouseOver">
+							idNext.setWidth("60px");
+							idNext.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							idNext.setWidth("50px");
+							idNext.setHeight("50px");
+						</attribute>
+		</image>
+			<image  id="idCancel" tooltiptext="${lblMenTCancel}" src="${imgClose}" onClick="idWindowR.closeWindow()"
+					width="50px" height="50px" visible="true">
+						<attribute name="onMouseOver">
+							idCancel.setWidth("60px");
+							idCancel.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							idCancel.setWidth("50px");
+							idCancel.setHeight("50px");
+						</attribute>
+					</image>
+			</hbox>
+			</div>			
 			
-			</box>
 	 	
 	 	</south>
 	</borderlayout>
