--- a/src/main/webapp/studies/window_add_lab_study.zul
+++ b/src/main/webapp/studies/window_add_lab_study.zul
@@ -144,14 +144,33 @@ use="com.cimmyt.zk.studies.ControlWindowStudies" onCreate="idWindowAdd.loadConte
 			</row>
 		</rows>
 	</grid>
-
-	<fisheyebar id="idFsb" attachEdge="top"
-	 itemWidth="50" itemHeight="50" itemMaxHeight="60" itemMaxWidth="60">
-	    <fisheye label="${lblNext}" id="idFisheyeNext"
-	        image="${imgNext}" onClick="idWindowAdd.nextPag()" visible="false"/>
-	    <fisheye label="${lblMenTCancel}" 
-	    image="${imgCancel}" onClick="idWindowAdd.closeWindow()"/>
-	</fisheyebar>
+	
+	<div align="center" width="100%">
+		<hbox>
+		<image  id="idFisheyeNext" tooltiptext="${lblNext}" src="${imgNext}" onClick="idWindowAdd.nextPag()"
+					width="50px" height="50px" visible="false">
+						<attribute name="onMouseOver">
+							idFisheyeNext.setWidth("60px");
+							idFisheyeNext.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							idFisheyeNext.setWidth("50px");
+							idFisheyeNext.setHeight("50px");
+						</attribute>
+		</image>
+			<image  id="idCancel" tooltiptext="${lblMenTCancel}" src="${imgCancel}" onClick="idWindowAdd.closeWindow()"
+					width="50px" height="50px" visible="true">
+						<attribute name="onMouseOver">
+							idCancel.setWidth("60px");
+							idCancel.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							idCancel.setWidth("50px");
+							idCancel.setHeight("50px");
+						</attribute>
+					</image>
+		</hbox>
+	</div>
 	</vbox>
 </window>
 </zk>
