--- a/src/main/webapp/studies/window_select_field.zul
+++ b/src/main/webapp/studies/window_select_field.zul
@@ -32,14 +32,32 @@
 </box>		
 
 <box width="100%" pack="center" align="center">
-			<fisheyebar id="idFsb" attachEdge="top" itemWidth="50"
-				itemHeight="50" itemMaxHeight="60" itemMaxWidth="60">
-				<fisheye label="${lblMenTAdd}" image="${imgOk}"
-					onClick="idWindowSelectField.addFields()" />
-				<fisheye label="${lblMenTCancel}" image="${imgClose}"
-					onClick="idWindowSelectField.closeWindow()" />
-			</fisheyebar>
-
+	<div align="center" width="100%">
+		<hbox>
+		<image  id="idAdd" tooltiptext="${lblMenTAdd}" src="${imgOk}" onClick="idWindowSelectField.addFields()"
+					width="40px" height="40px">
+						<attribute name="onMouseOver">
+							idAdd.setWidth("60px");
+							idAdd.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							idAdd.setWidth("40px");
+							idAdd.setHeight("40px");
+						</attribute>
+					</image>
+		<image  id="idClose" tooltiptext="${lblMenTCancel}" src="${imgClose}" onClick="idWindowSelectField.closeWindow()"
+					width="40px" height="40px">
+						<attribute name="onMouseOver">
+							idClose.setWidth("60px");
+							idClose.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							idClose.setWidth("40px");
+							idClose.setHeight("40px");
+						</attribute>
+					</image>
+		</hbox>
+		</div>
 		</box>
 </window>
 </zk>
