--- a/src/main/webapp/companies/companies.zul
+++ b/src/main/webapp/companies/companies.zul
@@ -17,20 +17,40 @@
 		<borderlayout width="100%" height="100%">
 			<north  sclass="borderNort" border="none" 
 				margins="0,15,0,0" style="overflow:visible;"  height="50px">
-				<hbox width="100%" hflex="true" style="position:absolute; ">
-					<fisheyebar id="idFsbCompanies" 
-						attachEdge="top" itemWidth="40" itemHeight="40" itemMaxHeight="60"
-						itemMaxWidth="60">
-
-							<fisheye label="${lblMenTAdd}" id="serviceProvider$idAdd"
-								image="${imgAdd}" onClick="idWindow.add()" />
-							<fisheye label="${lblMenTEdit}" id="serviceProvider$idEdit"
-								image="${imgEdit}" onClick="idWindow.edit()" />
-							<fisheye label="${lblMenTDelete}" id="serviceProvider$idDelete"
-								image="${imgDeleteItem}" onClick="idWindow.delete()" />
-
-						</fisheyebar>
-				
+				<hbox id="idHboxCompanies" width="100%" hflex="true" style="position:absolute; ">
+					<image  id="serviceProvider$idAdd" tooltiptext="${lblMenTAdd}" src="${imgAdd}" onClick="idWindow.add()"
+					width="40px" height="40px">
+						<attribute name="onMouseOver">
+							serviceProvider$idAdd.setWidth("60px");
+							serviceProvider$idAdd.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							serviceProvider$idAdd.setWidth("40px");
+							serviceProvider$idAdd.setHeight("40px");
+						</attribute>
+					</image>
+					<image  id="serviceProvider$idEdit" tooltiptext="${lblMenTEdit}" src="${imgEdit}" onClick="idWindow.edit()"
+					width="40px" height="40px">
+						<attribute name="onMouseOver">
+							serviceProvider$idEdit.setWidth("60px");
+							serviceProvider$idEdit.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							serviceProvider$idEdit.setWidth("40px");
+							serviceProvider$idEdit.setHeight("40px");
+						</attribute>
+					</image>
+					<image  id="serviceProvider$idDelete" tooltiptext="${lblMenTDelete}" src="${imgDeleteItem}" onClick="idWindow.delete()"
+					width="40px" height="40px">
+						<attribute name="onMouseOver">
+							serviceProvider$idDelete.setWidth("60px");
+							serviceProvider$idDelete.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							serviceProvider$idDelete.setWidth("40px");
+							serviceProvider$idDelete.setHeight("40px");
+						</attribute>
+					</image>
 					<space width="150px"></space>
 				<hbox align="center" hflex="true" width="100%" vflex="true">
 						<label sclass="textNor" value="${lblProSCLF}"/>
@@ -40,12 +60,18 @@
 								maxlength="4">
 							</textbox>
 							<separator width="5px" />
-							<fisheyebar attachEdge="right"
-								labelEdge="bottom" orient="horizontal" itemWidth="32"
-								itemHeight="32" itemMaxHeight="40" itemMaxWidth="40">
-								<fisheye label="${lblProSB}"
-									image="${imgFind}" onClick="idWindow.search()" />
-							</fisheyebar>
+							<image  id="idFindC" tooltiptext="${lblProSB}" src="${imgFind}" onClick="idWindow.search()"
+											width="32px" height="32px">
+												<attribute name="onMouseOver">
+													idFindC.setWidth("40px");
+													idFindC.setHeight("40px");
+												</attribute>
+												<attribute name="onMouseOut">
+													idFindC.setWidth("32px");
+													idFindC.setHeight("32px");
+												</attribute>
+							</image>
+
 						</hbox>
 						
 				</hbox>
