--- a/src/main/webapp/season/window_season.zul
+++ b/src/main/webapp/season/window_season.zul
@@ -46,15 +46,31 @@ use="com.cimmyt.zk.season.ControlWindowSeason" onCreate="idWindow.loadContextAtt
 			</row>
 		</rows>
 	</grid>
-	<box> 
-	<fisheyebar id="idFsb" style="position:absolute; margin:15px 180px;" attachEdge="top"
-	 itemWidth="50" itemHeight="50" itemMaxHeight="60" itemMaxWidth="60">
-	    <fisheye label="${lblMenTAdd}" 
-	        image="${imgOk}" onClick="idWindow.add()"/>
-	    <fisheye label="${lblMenTCancel}" 
-	    image="${imgClose}" onClick="idWindow.closeWindow()"/>
-	</fisheyebar>
-	
-	</box>
+		<div align="center" width="500px" >
+	<hbox>
+		<image  id="idAdd" tooltiptext="${lblMenTAdd}" src="${imgOk}" onClick="idWindow.add()"
+					width="40px" height="40px">
+						<attribute name="onMouseOver">
+							idAdd.setWidth("60px");
+							idAdd.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							idAdd.setWidth("40px");
+							idAdd.setHeight("40px");
+						</attribute>
+		</image>
+		<image  id="idClose" tooltiptext="${lblMenTCancel}" src="${imgClose}" onClick="idWindow.closeWindow()"
+					width="40px" height="40px">
+						<attribute name="onMouseOver">
+							idClose.setWidth("60px");
+							idClose.setHeight("60px");
+						</attribute>
+						<attribute name="onMouseOut">
+							idClose.setWidth("40px");
+							idClose.setHeight("40px");
+						</attribute>
+		</image>
+	</hbox>
+	</div>
 </window>
 </zk>
